--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,15 @@
 .navbar {
-  background-color: var(--color-primary);
+  background-color: var(--color-primary, #000);
   height: 74px;
-  width: 100vw;
-  padding: 0px 32px;
+  width: 100%;
+  max-width: 100%;
+  padding: 0 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.navActions {
+  display: flex;
+  align-items: center;
 }
